# yast-system-profile

./: Makefile.am  Makefile.in  README.md  RPMNAME  configure  configure.in  yast2-system-profile.spec.in
doc/: Makefile.am
doc/autodocs/: Makefile  Makefile.am  Makefile.in
package/: yast2-system-profile.changes
src/: Makefile.am  SystemProfile.ycp  dialogs.ycp  system-profile.desktop  system-profile.rnc  system-profile.ycp  system-profile_auto.ycp  texts.ycp
testsuite/tests/: SystemProfile.out  SystemProfile.ycp
